# python-fun

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: compose.py  fizzbuzz.py  pipe.py  roman_numerals.py  think_of_a_number.py
tests/: test_compose.py  test_fizzbuzz.py  test_fp.py  test_pipe.py  test_roman_numerals.py  test_think_of_a_number.py
